--- a/scripts/01_CollectHTML.Rmd
+++ b/scripts/01_CollectHTML.Rmd
@@ -14,15 +14,16 @@ This project collects all html from websites and searches the files for email ad
 # Load requires packages
 ```{r}
 library(Rcrawler)
-library(stringi)
+library(stringr)
 ```
 
 # First trial run with single website: download all html of website
 ```{r}
 Rcrawler(Website = "http://www.edf-feph.org/", no_cores = 4, no_conn = 4, MaxDepth = 1, DIR = "./data")
 rawHTML <- paste(readLines("./data/edf-feph.org-141609/6 .html "), collapse="\n")
-gregexpr('([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)', rawHTML, value = TRUE)
-
+str_detect(rawHTML, "^[[:alnum:].-_]+@[[:alnum:].-]+$")
+str_extract("Â <a href=\"mailto:andre.felix@edf-feph.org\">", "^[[:alnum:].-_]+@[[:alnum:].-]+$")
 rawHTML
+
 ```
 
